--- a/index.html
+++ b/index.html
@@ -1,9 +1,5 @@
 <html>
-  <head> </head>
-  <body>
-    <!-- https://firebase.google.com/docs/web/learn-more#ways-to-add-web-sdks -->
-    <!-- https://firebase.google.com/docs/web/learn-more?authuser=0#additional-setup-options -->
-    <!-- https://github.com/firebase/firebaseui-web#example-with-all-parameters-used -->
+  <head>
     <script
       defer
       src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"
@@ -13,33 +9,45 @@
       defer
       src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"
     ></script>
+
     <script
       defer
       src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"
     ></script>
+
     <script
       defer
       src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"
     ></script>
 
-    <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script>
+    <script
+      defer
+      src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"
+    ></script>
+
+    <script defer src="./init-1-firebase.js"></script>
+    <script defer src="./init-2-auth-ui.js"></script>
+    <script defer src="./script.js"></script>
+  </head>
+  <body>
+    <!-- https://firebase.google.com/docs/web/learn-more#ways-to-add-web-sdks -->
+    <!-- https://firebase.google.com/docs/web/learn-more?authuser=0#additional-setup-options -->
+    <!-- https://github.com/firebase/firebaseui-web#example-with-all-parameters-used -->
     <link
       type="text/css"
       rel="stylesheet"
       href="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.css"
     />
 
-    <script defer src="./init-1-firebase.js"></script>
-    <script defer src="./init-2-auth-ui.js"></script>
-    <script defer src="./script.js"></script>
-
     <!-- The surrounding HTML is left untouched by FirebaseUI.
          Your app may use that space for branding, controls and other customizations.-->
-    <h1>Welcome to My Awesome App</h1>
+    <h1>Firestore simple</h1>
+    <p>
+      Example of loading and using Firebase 8.10.0 from from CDN, no modules.
+    </p>
+
     <div id="firebaseui-auth-container"></div>
     <div id="loader">Loading...</div>
-
-    <h1>Firebase & Firestore simple CDN example</h1>
 
     <input type="button" value="add record" onclick="addDocButtonPressed()" />
     <input
@@ -47,6 +55,11 @@
       value="read records"
       onclick="readDocsButtonPressed()"
     />
-    <a href="https://firebase.google.com/docs/web/alt-setup">alt-setup guide</a>
+    <hr />
+    <div>
+      <a href="https://firebase.google.com/docs/web/alt-setup"
+        >Firebase alt-setup guide (CDNs, etc).</a
+      >
+    </div>
   </body>
 </html>
