Created scatter graph from firebase data

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <div>
     <canvas id="myChart"></canvas>
   </div>
-  <input type="button" value="show graph" onclick="addChart()" />
+  <input type="button" value="show example graph" onclick="addExampleScatterChart()" />
   <input type="button" value="read records" onclick="readDocsButtonPressed()" />
 
   <p>
