generate random data button added and graph adapted to show multiple datasets

--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
   <br><input id="submit" type="button" value="Submit" onclick="submitData()"><br>
   <br />
 
+  <input id="randomData" type="button" value="randomData" onclick="generateData(30, 3)">
+
   <!-- <input type="button" value="add record" onclick="addDocButtonPressed()" /> -->
   <hr />
   <div>
