separated graph functions into graphs.js

--- a/graphPage.html
+++ b/graphPage.html
@@ -12,6 +12,7 @@
 
     <script defer src="./init-1-firebase.js"></script>
     <script defer src="./init-2-auth-ui.js"></script>
+    <script defer src="./graphs.js"></script>
     <script defer src="./script.js"></script>
 </head>
 
@@ -41,7 +42,6 @@
 
     <hr />
 
-    <!-- <input type=" button" value="add record" onclick="addDocButtonPressed()" /> -->
     <div>
         <a href="https://firebase.google.com/docs/web/alt-setup">Firebase alt-setup guide (CDNs, etc).</a>
     </div>
