timestamp vs number of people line graph

--- a/graphPage.html
+++ b/graphPage.html
@@ -1,17 +1,17 @@
 <html>
 
 <head>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script defer src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-
     <script defer src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
-
     <script defer src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
-
     <script defer src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script>
-
     <script defer src="./init-1-firebase.js"></script>
     <script defer src="./init-2-auth-ui.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/moment@^2"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-moment@^1"></script>
+
     <script defer src="./graphs.js"></script>
     <script defer src="./script.js"></script>
 </head>
