--- a/graphPage.html
+++ b/graphPage.html
@@ -16,7 +16,7 @@
     <script defer src="./script.js"></script>
 </head>
 
-<body>
+<body style="background-color: rgb(74, 156, 92)">
     <!-- https://firebase.google.com/docs/web/learn-more#ways-to-add-web-sdks -->
     <!-- https://firebase.google.com/docs/web/learn-more?authuser=0#additional-setup-options -->
     <!-- https://github.com/firebase/firebaseui-web#example-with-all-parameters-used -->
@@ -25,7 +25,7 @@
 
     <!-- The surrounding HTML is left untouched by FirebaseUI.
          Your app may use that space for branding, controls and other customizations.-->
-    <h1>Firestore simple</h1>
+    <h1>Femi's Environmental Hack</h1>
     <div>
         <canvas id="myChart"></canvas>
     </div>
