added partner logos

--- a/graphPage.html
+++ b/graphPage.html
@@ -56,6 +56,19 @@
     </div>
     <br>
     <input id="homePage" type="button" value="homePage" onclick="location.href='/index.html'">
+
+    <div id="footer">
+        <br>
+        <div>
+            <image id="logo" src="/BrillLabsLogo.png" width="100px" height="40px" />
+        </div>
+        <div>
+            <image id="logo" src="/HackerfemoLogo.jpg" width="100px" height="100px" />
+        </div>
+        <div>
+            <image id="logo" src="/uniqloLogo.png" width="100px" height="100px" />
+        </div>
+    </div>
 </body>
 
 </html>
