--- a/index.html
+++ b/index.html
@@ -73,7 +73,15 @@
   <hr />
   <div id="footer">
     <br>
-    <image id="logo1" src="/HackerfemoLogo.jpg" width="100px" height="100px" />
+    <div>
+      <image id="logo" src="/BrillLabsLogo.png" width="100px" height="40px" />
+    </div>
+    <div>
+      <image id="logo" src="/HackerfemoLogo.jpg" width="100px" height="100px" />
+    </div>
+    <div>
+      <image id="logo" src="/uniqloLogo.png" width="100px" height="100px" />
+    </div>
   </div>
 </body>
 
