--- a/index.html
+++ b/index.html
@@ -30,34 +30,47 @@
   <!-- <div id="firebaseui-auth-container"></div>
   <div id="loader">Loading...</div> -->
   <div id="dataInputForm">
-    <div id="inputBoxes">
+    <div id="numPeopleInput">
+      <label for="numPeople">Number of people:</label><br>
+      <input id="numPeople" type="number"><br>
+    </div>
+    <br>
+    <div id="CO2Input">
       <div id="sensorInput">
-        <label for="CO21">CO2 reading 1:</label><br>
-        <input id="CO21" type="number" min="400" max="3000"><br>
+        <h4>Sensor 1</h4>
+        <label for="CO21">CO2 value:</label><br>
+        <input id="CO21" type="number" min="400" max="4000"><br>
         <br>
-        <label for="peopleNum1">Number of people:</label><br>
-        <input id="peopleNum1" type="number"><br>
       </div>
       <div id="sensorInput">
-        <label for="CO22">CO2 reading 2:</label><br>
-        <input id="CO22" type="number" min="400" max="3000"><br>
+        <h4>Sensor 2</h4>
+        <label for="CO22">CO2 value:</label><br>
+        <input id="CO22" type="number" min="400" max="4000"><br>
         <br>
-        <label for="peopleNum2">Number of people:</label><br>
-        <input id="peopleNum2" type="number"><br>
       </div>
       <div id="sensorInput">
-        <label for="CO23">CO2 reading 3:</label><br>
-        <input id="CO23" type="number" min="400" max="3000"><br>
+        <h4>Sensor 3</h4>
+        <label for="CO23">CO2 value:</label><br>
+        <input id="CO23" type="number" min="400" max="4000"><br>
         <br>
-        <label for="peopleNum3">Number of people:</label><br>
-        <input id="peopleNum3" type="number"><br>
       </div>
-      <div id="sensorInput4">
-        <label for="CO24">CO2 reading 4:</label><br>
-        <input id="CO24" type="number" min="400" max="3000"><br>
+      <div id="sensorInput">
+        <h4>Sensor 4</h4>
+        <label for="CO24">CO2 value:</label><br>
+        <input id="CO24" type="number" min="400" max="4000"><br>
         <br>
-        <label for="peopleNum4">Number of people:</label><br>
-        <input id="peopleNum4" type="number"><br>
+      </div>
+      <div id="sensorInput">
+        <h4>Sensor 5</h4>
+        <label for="CO25">CO2 value:</label><br>
+        <input id="CO25" type="number" min="400" max="4000"><br>
+        <br>
+      </div>
+      <div id="lastSensorInput">
+        <h4>Sensor 6</h4>
+        <label for="CO26">CO2 value:</label><br>
+        <input id="CO26" type="number" min="400" max="4000"><br>
+        <br>
       </div>
     </div>
     <br>
@@ -78,9 +91,6 @@
     </div>
     <div>
       <image id="logo" src="/HackerfemoLogo.jpg" width="100px" height="100px" />
-    </div>
-    <div>
-      <image id="logo" src="/uniqloLogo.png" width="100px" height="100px" />
     </div>
   </div>
 </body>
